--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<script src="_assets/js/index.js"></script>
 		<script src="js/jquery.mobile-1.4.4.min.js"></script>
 	</head>
-	<body  style="font-family:Arial Black; background:white;">
+	<body  style="font-family:Arial Black; background:#1D6D38;">
 
 		<div data-role="page" id="homepage"  style="font-family:Arial Black; background:url('img/photo.JPG');background-size: 100%;background-repeat: no-repeat;background-attachment: fixed;">
 
@@ -24,12 +24,12 @@
 				<!-- <h1>Instania</h1> -->
 			</div><!-- /header -->
 
-			<div  data-role="content" class="ui-content">
+			<!-- <div  data-role="content" class="ui-content">
 				<div id="splash">
 					<h1 class="splash" id="splahLabel1">WISDOM <br/>SEED</h1>
 					<h2 class="splash" id="splahLabel2">COLLECTOR</h2>
 				</div>
-			</div><!-- /content -->
+			</div><!-- /content --> 
 
 			<div data-role="footer" data-position="fixed" data-theme='b'>
 				<!-- <h1>WELCOME</h1> -->
